--- a/index.html
+++ b/index.html
@@ -8,27 +8,111 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
         const root = document.getElementById("root")
-        function App() {
-            const [minutes, setMinutes] = React.useState(0)
+        
+        function MinutesToHours() {
+            const [amount, setAmount] = React.useState(0)
+            const [flipped, setFlipped] = React.useState(false)
             const onChange = (event) => {
-                // console.log(event) // event
-                // console.log(event.target.value)
-                setMinutes(event.target.value)
+                setAmount(event.target.value)
+            }
+            const reset = () => {
+                setAmount(0)
+            }
+            const onFlip = () => {
+                reset()
+                setFlipped((current) => !current)
+            }
+            return (
+                <div>
+                    <div>
+                        <label htmlFor="minutes">Minutes</label>
+                        <input
+                            value={flipped ? (amount * 60) : amount}
+                            id="minutes" 
+                            placeholder="Minutes" 
+                            type="number"
+                            onChange={onChange}
+                            disabled={flipped}
+                        />
+                    </div>
+                    <div>
+                        <label htmlFor="hours">Hours</label>
+                        <input 
+                            value={flipped ? amount : Math.round(amount / 60)}
+                            id="minutes" 
+                            placeholder="Hours"
+                            type="number"
+                            onChange={onChange}
+                            disabled={!flipped}
+                        />
+                    </div>
+                    <button onClick={reset}>Reset</button>
+                    <button onClick={onFlip}>Flip</button>
+                </div>
+            )
+        }
+
+        function KmToMiles() {
+            const [amount, setAmount] = React.useState(0)
+            const [flipped, setFlipped] = React.useState(false)
+            const onChange = (event) => {
+                setAmount(event.target.value)
+            }
+            const reset = () => {
+                setAmount(0)
+            }
+            const onFlip = () => {
+                reset()
+                setFlipped((current) => !current)
+            }
+            return (
+                <div>
+                    <div>
+                        <label htmlFor="km">km</label>
+                        <input
+                            value={flipped ? (amount * 1.609) : amount}
+                            id="km" 
+                            placeholder="km" 
+                            type="number"
+                            onChange={onChange}
+                            disabled={flipped}
+                        />
+                    </div>
+                    <div>
+                        <label htmlFor="miles">miles</label>
+                        <input 
+                            value={flipped ? amount : (amount / 1.609)}
+                            id="miles" 
+                            placeholder="miles"
+                            type="number"
+                            onChange={onChange}
+                            disabled={!flipped}
+                        />
+                    </div>
+                    <button onClick={reset}>Reset</button>
+                    <button onClick={onFlip}>Flip</button>
+                </div>
+            )
+        }
+
+        function App() {
+            const [index, setIndex] = React.useState("xx")
+            const onSelect = (event) => {
+                console.log(event.target.value)
+                setIndex(event.target.value)
             }
             return (
                 <div>
                     <h1 className="hi">Super Converter</h1>
-                    <label htmlFor="minutes">Minutes</label>
-                    <input
-                        value={minutes}
-                        id="minutes" 
-                        placeholder="Minutes" 
-                        type="number" 
-                        onChange={onChange}
-                    />
-                    <h4>You want to convert {minutes}</h4>
-                    <label htmlFor="hours">Hours</label>
-                    <input id="minutes" placeholder="Hours" type="number" />
+                    <select value={index} onChange={onSelect}>
+                        <option value="xx">Select your units</option>
+                        <option value="0">Minutes & Hours</option>
+                        <option value="1">Km & Miles</option>
+                    </select>
+                    <hr />
+                    {index == "xx" ? "Please select your units" : null}
+                    {index == "0" ? <MinutesToHours /> : null}
+                    {index == "1" ? <KmToMiles /> : null}
                 </div>
             )
         }
